Experiment with different image resolutions

--- a/index.html
+++ b/index.html
@@ -22,48 +22,48 @@
 
         </div>
         <br>
-        <section class="flex">
-            <h2>Rounds</h2>
-            <h2>Player</h2>
-            <h2>Ties</h2>
-            <h2>Kool AI</h2>
-        </section>
-        <div class="flex">
-            <p class="centre-text">10 of 10</p>
-            <p>2</p>
-            <p>6</p>
-            <p>2</p>
+        <div class="addmargin">
+            <section class="flex">
+                <h2>Rounds</h2>
+                <h2>Player</h2>
+                <h2>Ties</h2>
+                <h2>Kool AI</h2>
+            </section>
+            <div class="flex">
+                <p class="centre-text">10 of 10</p>
+                <p>2</p>
+                <p>6</p>
+                <p>2</p>
+            </div>
+            <br>
+            <br>
+            <div class="flex">
+                <button>
+                    Rock
+                </button>
+                <button>
+                    Paper
+                </button>
+                <button>
+                    Scissors
+                </button>
+                <button>
+                    Lizard
+                </button>
+                <button>
+                    Spock
+                </button>
+            </div>
+            <br>
+            <div class="flex">
+                <div><img src="assets/images/lizard1_drconners.webp" alt="" id="playerChoiceImage"></div>
+                <div><img src="assets/images/scissors3_earth_teen_titans.webp" alt=""  id="koolAIChoiceImage"></div>
+            </div>
+            <br>
+            <br>
+            <div id="outcome"></div>
+            <div id="message"></div>
         </div>
-        <br>
-        <br>
-        <div class="flex">
-            <button>
-                Rock
-            </button>
-            <button>
-                Paper
-            </button>
-            <button>
-                Scissors
-            </button>
-            <button>
-                Lizard
-            </button>
-            <button>
-                Spock
-            </button>
-        </div>
-        <br>
-        <div class="flex">
-            <div><img src="assets/images/spock1.png"
-                alt=""></div>
-            <div><img src="assets/images/scissors2_daniil_onischenko_unsplash.jpg"
-                alt=""></div>
-        </div>
-        <br>
-        <br>
-        <div id="outcome"></div>
-        <div id="message"></div>
         <br>
         <br>
         <div id="playagain"></div>
@@ -72,5 +72,5 @@
         <button>Rules</button>
     </section>
 </body>
-
+<script src="rpsln.js" type="text/javascript"></script>
 </html>
