Add flex to display the scores

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <section>
-        <h1>
+        <h1 class="header-margin">
             Rock Papers Scissors Lizard Spock
         </h1>
         <br>
@@ -22,19 +22,25 @@
 
         </div>
         <br>
-        <div class="addmargin">
+        <div class="side-margins">
             <section class="flex">
-                <h2>Rounds</h2>
-                <h2>Player</h2>
-                <h2>Ties</h2>
-                <h2>Kool AI</h2>
+                <div class="column-centre-aligned">
+                    <h2>Rounds</h2>
+                    <p class="centre-text">10 of 10</p>
+                </div>
+                <div class="column-centre-aligned">
+                    <h2>Player</h2>
+                    <p class="centre-text">2</p>
+                </div>
+                <div class="column-centre-aligned">
+                    <h2>Ties</h2>
+                    <p class="centre-text">6</p>
+                </div>
+                <div class="column-centre-aligned">
+                    <h2>Kool AI</h2>
+                    <p class="centre-text">2</p>
+                </div>
             </section>
-            <div class="flex">
-                <p class="centre-text">10 of 10</p>
-                <p>2</p>
-                <p>6</p>
-                <p>2</p>
-            </div>
             <br>
             <br>
             <div class="flex">
