write a test script to display all the images

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <br>
             <div class="flex">
-                <div><img src="assets/images/lizard1_drconners.webp" alt="" id="playerChoiceImage"></div>
+                <div><img src="assets/images/spock1.png" alt="" id="playerChoiceImage"></div>
                 <div><img src="assets/images/scissors3_earth_teen_titans.webp" alt=""  id="koolAIChoiceImage"></div>
             </div>
             <br>
