--- a/index.html
+++ b/index.html
@@ -14,69 +14,106 @@
 
 <body>
     <section>
+        <div class="form-container">
+            <div class="form-container-child1">
+                <h1 class="header-margin">
+                    Rock Papers Scissors Lizard Spock
+                </h1>
+                <form class="show-form" action="">
+                    <p>Hello! My name is Kool A.I.</p>
+                    <p>I challenge you to a game of</p>
+                    <p>Rock, Paper, Scissors, Lizard, Spock</p>
+                    <br>
+                    <p>Best of:</p>
+                    <br>
+                      <input type="radio" id="fifteen" name="total_numberof_rounds" value="15" checked>
+                      <label for="fifteen">15 (default)</label>
+                    <br>
+                      <input type="radio" id="ten" name="total_numberof_rounds" value="10">
+                      <label for="ten">10</label>
+                    <br>
+                      <input type="radio" id="five" name="total_numberof_rounds" value="5">
+                      <label for="five">5</label>
+                    <br>
+                      <input type="radio" id="random" name="total_numberof_rounds" value="random">
+                      <label for="random">Random number (1 - 15)</label>
+                    <br>
+                    <br>
+                    <input type="submit" value="Let's Play!">
+                </form>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <button class="rules-button">Rules</button>
+    </section>
+    <section class="show-game">
         <h1 class="header-margin">
             Rock Papers Scissors Lizard Spock
         </h1>
-        <br>
-        <div id="intro">
-
-        </div>
-        <br>
-        <div class="side-margins">
-            <section class="flex">
-                <div class="column-centre-aligned">
-                    <h2>Rounds</h2>
-                    <p class="centre-text">10 of 10</p>
-                </div>
-                <div class="column-centre-aligned">
-                    <h2>Player</h2>
-                    <p class="centre-text">2</p>
-                </div>
-                <div class="column-centre-aligned">
-                    <h2>Ties</h2>
-                    <p class="centre-text">6</p>
-                </div>
-                <div class="column-centre-aligned">
-                    <h2>Kool AI</h2>
-                    <p class="centre-text">2</p>
-                </div>
-            </section>
+        <main class="show-game">
             <br>
-            <br>
-            <div class="flex">
-                <button>
-                    Rock
-                </button>
-                <button>
-                    Paper
-                </button>
-                <button>
-                    Scissors
-                </button>
-                <button>
-                    Lizard
-                </button>
-                <button>
-                    Spock
-                </button>
+            <div id="intro">
             </div>
             <br>
-            <div class="flex">
-                <div><img src="assets/images/spock1.png" alt="" id="playerChoiceImage"></div>
-                <div><img src="assets/images/scissors3_earth_teen_titans.webp" alt=""  id="koolAIChoiceImage"></div>
+            <div class="side-margins">
+                <section class="flex">
+                    <div class="column-centre-aligned">
+                        <h2>Rounds</h2>
+                        <p id="number-of-rounds" class="centre-text">10 of 10</p>
+                    </div>
+                    <div class="column-centre-aligned">
+                        <h2>Player</h2>
+                        <p id="player-score" class="centre-text">2</p>
+                    </div>
+                    <div class="column-centre-aligned">
+                        <h2>Ties</h2>
+                        <p id="number-of-ties" class="centre-text">6</p>
+                    </div>
+                    <div class="column-centre-aligned">
+                        <h2>Kool AI</h2>
+                        <p id="computer-score" class="centre-text">2</p>
+                    </div>
+                </section>
+                <br>
+                <br>
+                <div class="flex">
+                    <button>
+                        Rock
+                    </button>
+                    <button>
+                        Paper
+                    </button>
+                    <button>
+                        Scissors
+                    </button>
+                    <button>
+                        Lizard
+                    </button>
+                    <button>
+                        Spock
+                    </button>
+                </div>
+                <br>
+                <div class="flex">
+                    <div><img src="assets/images/spock1.png" alt="" id="player-choice-image"></div>
+                    <div><img src="assets/images/scissors3_earth_teen_titans.webp" alt="" id="koolai-choice-image"></div>
+                </div>
+                <br>
+                <br>
+                <div id="outcome"></div>
+                <div id="message"></div>
             </div>
-            <br>
-            <br>
-            <div id="outcome"></div>
-            <div id="message"></div>
-        </div>
+        </main>
         <br>
         <br>
-        <div id="playagain"></div>
+        <div id="play-again"></div>
         <br>
         <br>
         <button>Rules</button>
     </section>
 </body>
 <script src="rpsln.js" type="text/javascript"></script>
+
 </html>
