--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Rock Papers Scissors Lizard Spock Game">
-    <meta name="keywords" content="rock, papers, scissors, lizard, spock, game, games, gaming, big bang theory">
+    <meta name="keywords"
+        content="rock, papers, scissors, lizard, spock, game, games, gaming, big bang theory, sam kass, karen bryla">
     <title>Rock Papers Scissors Lizard Spock Game</title>
     <!-- Stylesheet -->
     <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
@@ -98,7 +99,8 @@
                 <br>
                 <div class="flex">
                     <div><img src="assets/images/spock1.png" alt="" id="player-choice-image"></div>
-                    <div><img src="assets/images/scissors3_earth_teen_titans.webp" alt="" id="koolai-choice-image"></div>
+                    <div><img src="assets/images/scissors3_earth_teen_titans.webp" alt="" id="koolai-choice-image">
+                    </div>
                 </div>
                 <br>
                 <br>
@@ -113,7 +115,8 @@
         <br>
         <button>Rules</button>
     </section>
+    <script src="assets/js/rpsln.js" type="text/javascript"></script>
 </body>
-<script src="rpsln.js" type="text/javascript"></script>
+
 
 </html>
