after revisiting 'love maths' project structure this code accordingly

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
                 <h1 class="header-margin">
                     Rock Papers Scissors Lizard Spock
                 </h1>
-                <form class="show-form" action="">
+                <form class="show-form" action="" id="initial-form-id">
                     <p>Hello! My name is Kool A.I.</p>
                     <p>I challenge you to a game of</p>
                     <p>Rock, Paper, Scissors, Lizard, Spock</p>
                     <br>
                     <p>Best of:</p>
                     <br>
-                      <input type="radio" id="fifteen" name="total_numberof_rounds" value="15" checked>
-                      <label for="fifteen">15 (default)</label>
+                    <input type="radio" id="fifteen" name="total_numberof_rounds" value="15" checked>
+                    <label for="fifteen">15 (default)</label>
                     <br>
-                      <input type="radio" id="ten" name="total_numberof_rounds" value="10">
-                      <label for="ten">10</label>
+                    <input type="radio" id="ten" name="total_numberof_rounds" value="10">
+                    <label for="ten">10</label>
                     <br>
-                      <input type="radio" id="five" name="total_numberof_rounds" value="5">
-                      <label for="five">5</label>
+                    <input type="radio" id="five" name="total_numberof_rounds" value="5">
+                    <label for="five">5</label>
                     <br>
-                      <input type="radio" id="random" name="total_numberof_rounds" value="random">
-                      <label for="random">Random number (1 - 15)</label>
+                    <input type="radio" id="random" name="total_numberof_rounds" value="random">
+                    <label for="random">Random number (1 - 15)</label>
                     <br>
                     <br>
                     <input type="submit" value="Let's Play!">
@@ -62,19 +62,19 @@
                 <section class="flex">
                     <div class="column-centre-aligned">
                         <h2>Rounds</h2>
-                        <p id="number-of-rounds" class="centre-text">10 of 10</p>
+                        <span id="number-of-rounds" class="centre-text">10 of 10</span>
                     </div>
                     <div class="column-centre-aligned">
-                        <h2>Player</h2>
-                        <p id="player-score" class="centre-text">2</p>
+                        <h2>spanlayer</h2>
+                        <span id="player-score" class="centre-text">2</span>
                     </div>
                     <div class="column-centre-aligned">
                         <h2>Ties</h2>
-                        <p id="number-of-ties" class="centre-text">6</p>
+                        <span id="number-of-ties" class="centre-text">6</span>
                     </div>
                     <div class="column-centre-aligned">
                         <h2>Kool AI</h2>
-                        <p id="computer-score" class="centre-text">2</p>
+                        <span id="computer-score" class="centre-text">2</span>
                     </div>
                 </section>
                 <br>
