--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 <body>
     <section>
         <div class="form-container">
+<!-- DG1 -->
             <div class="form-container-child1">
-                <h1 class="header-margin">
+                <h1 class="header-margin-forform">
                     Rock Papers Scissors Lizard Spock
                 </h1>
                 <form class="show-form" action="" id="initial-form-id">
@@ -44,17 +45,14 @@
                 </form>
             </div>
         </div>
-        <br>
-        <br>
-        <br>
-        <button class="rules-button">Rules</button>
     </section>
     <section class="show-game">
-        <h1 class="header-margin">
+        <h1 class="header-margin-forgame">
             Rock Papers Scissors Lizard Spock
         </h1>
-        <main class="show-game">
+        <main>
             <br>
+<!-- DG2 -->
             <div id="intro">
             </div>
             <br>
@@ -65,7 +63,7 @@
                         <span id="number-of-rounds" class="centre-text">10 of 10</span>
                     </div>
                     <div class="column-centre-aligned">
-                        <h2>spanlayer</h2>
+                        <h2>Player</h2>
                         <span id="player-score" class="centre-text">2</span>
                     </div>
                     <div class="column-centre-aligned">
@@ -104,19 +102,16 @@
                 </div>
                 <br>
                 <br>
+<!-- DG3 -->
                 <div id="outcome"></div>
                 <div id="message"></div>
             </div>
         </main>
         <br>
-        <br>
         <div id="play-again"></div>
-        <br>
-        <br>
-        <button>Rules</button>
     </section>
+    <button class="rules-button">Rules</button>
     <script src="assets/js/rpsln.js" type="text/javascript"></script>
 </body>
-
 
 </html>
