--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <section>
         <div class="form-container">
-<!-- DG1 -->
+            <!-- DG1 -->
             <div class="form-container-child1">
                 <h1 class="header-margin-forform">
                     Rock Papers Scissors Lizard Spock
@@ -28,13 +28,13 @@
                     <br>
                     <p>Best of:</p>
                     <br>
-                    <input type="radio" id="fifteen" name="total_numberof_rounds" value="15" checked>
+                    <input type="radio" id="fifteen" name="total_numberof_rounds" value="15">
                     <label for="fifteen">15 (default)</label>
                     <br>
                     <input type="radio" id="ten" name="total_numberof_rounds" value="10">
                     <label for="ten">10</label>
                     <br>
-                    <input type="radio" id="five" name="total_numberof_rounds" value="5">
+                    <input type="radio" id="five" name="total_numberof_rounds" value="3" checked>
                     <label for="five">5</label>
                     <br>
                     <input type="radio" id="random" name="total_numberof_rounds" value="random">
@@ -52,7 +52,7 @@
         </h1>
         <main>
             <br>
-<!-- DG2 -->
+            <!-- DG2 -->
             <div id="intro">
             </div>
             <br>
@@ -60,19 +60,24 @@
                 <section class="flex">
                     <div class="column-centre-aligned">
                         <h2>Rounds</h2>
-                        <span id="number-of-rounds" class="centre-text">10 of 10</span>
+                        <div centre-text>
+                            <span id="current-round-number">0</span>
+                            <span> of </span>
+                            <span id="number-of-rounds">0</span>
+                        </div>
+
                     </div>
                     <div class="column-centre-aligned">
                         <h2>Player</h2>
-                        <span id="player-score" class="centre-text">2</span>
+                        <span id="player-score">0</span>
                     </div>
                     <div class="column-centre-aligned">
                         <h2>Ties</h2>
-                        <span id="number-of-ties" class="centre-text">6</span>
+                        <span id="number-of-ties">0</span>
                     </div>
                     <div class="column-centre-aligned">
                         <h2>Kool AI</h2>
-                        <span id="computer-score" class="centre-text">2</span>
+                        <span id="computer-score">0</span>
                     </div>
                 </section>
                 <br>
@@ -95,14 +100,11 @@
                     </button>
                 </div>
                 <br>
-                <div class="flex">
-                    <div><img src="assets/images/spock1.png" alt="" id="player-choice-image"></div>
-                    <div><img src="assets/images/scissors3_earth_teen_titans.webp" alt="" id="koolai-choice-image">
-                    </div>
+                <div class="flex" id="display-container">
                 </div>
                 <br>
                 <br>
-<!-- DG3 -->
+                <!-- DG3 -->
                 <div id="outcome"></div>
                 <div id="message"></div>
             </div>
