Add event listeners for the five shapes

--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
                 <br>
                 <br>
                 <div class="flex">
-                    <button>
+                    <button class="shape-button">
                         Rock
                     </button>
-                    <button>
+                    <button class="shape-button">
                         Paper
                     </button>
-                    <button>
+                    <button class="shape-button">
                         Scissors
                     </button>
-                    <button>
+                    <button class="shape-button">
                         Lizard
                     </button>
-                    <button>
+                    <button class="shape-button">
                         Spock
                     </button>
                 </div>
