--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <br>
         <div id="play-again"></div>
     </section>
-    <button class="rules-button">Rules</button>
+    <button id="the-rules-button" class="rules-button">Rules</button>
     <script src="assets/js/rpsln.js" type="text/javascript"></script>
 </body>
 
