Clean up CSS code

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <section class="flex">
                     <div class="column-centre-aligned">
                         <h2>Rounds</h2>
-                        <div centre-text>
+                        <div>
                             <span id="current-round-number">0</span>
                             <span> of </span>
                             <span id="number-of-rounds">0</span>
