Add the logic to determine the scores

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                 <br>
                 <br>
                 <!-- DG3 -->
-                <div id="outcome"></div>
-                <div id="message"></div>
+                <div id="outcome" class="display-message invisible"></div>
+                <div id="explanation" class="display-message invisible"></div>
             </div>
         </main>
         <br>
