Fix mathematical bug regarding wrong number order

--- a/index.html
+++ b/index.html
@@ -101,12 +101,17 @@
                 </div>
                 <br>
                 <div class="flex" id="display-container">
+                    <div class="hide-element">
+                        "HELLO"
+                        HIDDEN
+                        <button id="the2-rules-button" class="rules-button">Rules</button>
+                    </div>
                 </div>
                 <br>
                 <br>
                 <!-- DG3 -->
-                <div id="outcome" class="display-message invisible"></div>
-                <div id="explanation" class="display-message invisible"></div>
+                <div id="outcome" class="display-message"></div>
+                <div id="explanation" class="display-message"></div>
             </div>
         </main>
         <br>
