Clean up code after bugfix

--- a/index.html
+++ b/index.html
@@ -100,23 +100,23 @@
                     </button>
                 </div>
                 <br>
+                <!-- DG -->
                 <div class="flex" id="display-container">
                     <div class="hide-element">
-                        "HELLO"
-                        HIDDEN
-                        <button id="the2-rules-button" class="rules-button">Rules</button>
+                        <button id="play-again-button" class="rules-button">Rules</button>
                     </div>
                 </div>
                 <br>
                 <br>
-                <!-- DG3 -->
                 <div id="outcome" class="display-message"></div>
                 <div id="explanation" class="display-message"></div>
             </div>
         </main>
         <br>
-        <div id="play-again"></div>
+                <!-- DG3 see above RE play again -->
+                <div id="play-again"></div>
     </section>
+    <!-- DG4 need to stick this position -->
     <button id="the-rules-button" class="rules-button">Rules</button>
     <script src="assets/js/rpsln.js" type="text/javascript"></script>
 </body>
