Main logic now works consistently

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Rock Papers Scissors Lizard Spock Game">
+    <meta name="description" content="Rock Paper Scissors Lizard Spock Game">
     <meta name="keywords"
-        content="rock, papers, scissors, lizard, spock, game, games, gaming, big bang theory, sam kass, karen bryla">
-    <title>Rock Papers Scissors Lizard Spock Game</title>
+        content="rock, paper, scissors, lizard, spock, game, games, gaming, big bang theory, sam kass, karen bryla">
+    <title>Rock Paper Scissors Lizard Spock Game</title>
     <!-- Stylesheet -->
     <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
 </head>
@@ -19,7 +19,7 @@
             <!-- DG1 -->
             <div class="form-container-child1">
                 <h1 class="header-margin-forform">
-                    Rock Papers Scissors Lizard Spock
+                    Rock Paper Scissors Lizard Spock
                 </h1>
                 <form class="show-form" action="" id="initial-form-id">
                     <p>Hello! My name is Kool A.I.</p>
@@ -38,10 +38,10 @@
                     <input type="radio" id="ten" name="total_numberof_rounds" value="10">
                     <label for="ten">10</label>
                     <br>
-                    <input type="radio" id="five" name="total_numberof_rounds" value="5" checked>
+                    <input type="radio" id="five" name="total_numberof_rounds" value="5">
                     <label for="five">5</label>
                     <br>
-                    <input type="radio" id="random" name="total_numberof_rounds" value="random">
+                    <input type="radio" id="random" name="total_numberof_rounds" value="random" checked>
                     <label for="random">Random number (1 - 15)</label>
                     <br>
                     <br>
@@ -52,7 +52,7 @@
     </section>
     <section class="show-game">
         <h1 class="header-margin-forgame">
-            Rock Papers Scissors Lizard Spock
+            Rock Paper Scissors Lizard Spock
         </h1>
         <main>
             <br>
