Add icons to buttons to depict each weapon

--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
                 <br>
                 <br>
                 <div class="flex">
-                    <button class="shape-button">
-                        Rock
+                    <button class="weapon-button">
+                        Rock <i class="fas fa-hand-rock"></i>
                     </button>
-                    <button class="shape-button">
-                        Paper
+                    <button class="weapon-button">
+                        Paper <i class="fas fa-hand-paper"></i>
                     </button>
-                    <button class="shape-button">
-                        Scissors
+                    <button class="weapon-button">
+                        Scissors <i class="fas fa-hand-scissors"></i>
                     </button>
-                    <button class="shape-button">
-                        Lizard
+                    <button class="weapon-button">
+                        Lizard <i class="fas fa-hand-lizard"></i>
                     </button>
-                    <button class="shape-button">
-                        Spock
+                    <button class="weapon-button">
+                        Spock <i class="fas fa-hand-spock"></i>
                     </button>
                 </div>
                 <br>
@@ -122,6 +122,7 @@
     </section>
     <!-- DG4 need to stick this position -->
     <button id="the-rules-button" class="rules-button">Rules</button>
+    <script src="https://kit.fontawesome.com/91349736c3.js" crossorigin="anonymous"></script>
     <script src="assets/js/rpsln.js"></script>
 </body>
 
