Add noscript and defer to index.html

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
             <div id="outcome" class="display-message"></div>
             <div id="explanation" class="display-message"></div>
         </div>
-        </div>
         <br>
         <div id="play-again"></div>
     </section>
     <button id="the-rules-button" class="rules-button">Rules</button>
     <script src="https://kit.fontawesome.com/91349736c3.js" crossorigin="anonymous"></script>
-    <script src="assets/js/rpsln.js"></script>
+    <script src="assets/js/rpsln.js" defer></script>
+    <noscript>Your browser does not support JavaScript!</noscript>
 </body>
 
 </html>
