--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </section>
     <button id="the-rules-button" class="rules-button">Rules</button>
     <script src="https://kit.fontawesome.com/91349736c3.js" crossorigin="anonymous"></script>
-    <script src="assets/js/rpsln.js" defer></script>
+    <script src="assets/js/amiresponsive.js" defer></script>
     <noscript>Your browser does not support JavaScript!</noscript>
 </body>
 
