Add the functionality to display & type out the Rules of the Game

--- a/index.html
+++ b/index.html
@@ -112,6 +112,23 @@
         <br>
         <div id="play-again"></div>
     </section>
+    <section class="show-rules-page">
+        <h1 class="header-margin-forgame">
+            Rock Paper Scissors Lizard Spock
+        </h1>
+        <br>
+        <div class="rules-container" id="the-rules-container">
+        </div>
+        <br>
+        <div class="video-container">
+            <p>If you would like a demonstration</p>
+            <p>please watch the following
+                <a href="https://www.youtube.com/watch?v=iapcKVn7DdY" target="_blank" rel="noopener">video</a>
+            </p>
+            <br>
+            <button id="ok-button" class="rules-button">OK</button>
+        </div>
+    </section>
     <button id="the-rules-button" class="rules-button">Rules</button>
     <script src="https://kit.fontawesome.com/91349736c3.js" crossorigin="anonymous"></script>
     <script src="assets/js/rpsln.js" defer></script>
