--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <a href="https://www.youtube.com/watch?v=iapcKVn7DdY" target="_blank" rel="noopener">video</a>
             </p>
             <br>
-            <button id="ok-button" class="rules-button">OK</button>
+            <button id="the-ok-button" class="rules-button">OK</button>
         </div>
     </section>
     <button id="the-rules-button" class="rules-button">Rules</button>
