--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Rock Paper Scissors Lizard Spock Game</title>
     <!-- Stylesheet -->
     <link href="./assets/css/style.css" rel="stylesheet" type="text/css">
+    <link rel='shortcut icon' type='image/x-icon' href='favicon.ico'>
 </head>
 
 <body>
